--- a/posts/2016-07-30-merge-a-list-of-datasets-together.qmd
+++ b/posts/2016-07-30-merge-a-list-of-datasets-together.qmd
@@ -9,8 +9,8 @@ toc: true
 
 
 
-<p><a href="http://www.brodrigues.co/2016/07/26/read-a-lot-of-datasets-at-once-with-r">Last week</a> I showed how to read a lot of datasets at once with R, and this week I’ll continue from there and show a very simple function that uses this list of read datasets and merges them all together.</p>
-<p>First we’ll use <code>read_list()</code> to read all the datasets at once (for more details read <a href="http://www.brodrigues.co/2016/07/26/read-a-lot-of-datasets-at-once-with-r">last week’s post</a>):</p>
+<p><a href="2016-07-26-read-a-lot-of-datasets-at-once-with-r.qmd">Last week</a> I showed how to read a lot of datasets at once with R, and this week I’ll continue from there and show a very simple function that uses this list of read datasets and merges them all together.</p>
+<p>First we’ll use <code>read_list()</code> to read all the datasets at once (for more details read <a href="2016-07-26-read-a-lot-of-datasets-at-once-with-r.qmd">last week’s post</a>):</p>
 <pre class="r"><code>library(&quot;readr&quot;)
 library(&quot;tibble&quot;)
 
