--- a/posts/2018-01-05-lists_all_the_way2.qmd
+++ b/posts/2018-01-05-lists_all_the_way2.qmd
@@ -8,7 +8,7 @@ toc: true
 ---
 
 
-<p>Shortly after my <a href="http://www.brodrigues.co/blog/2018-01-03-lists_all_the_way/">previous blog post</a>,
+<p>Shortly after my <a href="2018-01-03-lists_all_the_way.qmd">previous blog post</a>,
 I saw this tweet on my timeline:</p>
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">The purrr resolution for 2018 - learn at least one purrr function per week - is officially launched with encouragement and inspiration from <a href="https://twitter.com/statwonk?ref_src=twsrc%5Etfw">@statwonk</a> and <a href="https://twitter.com/hadleywickham?ref_src=twsrc%5Etfw">@hadleywickham</a>. We start with modify_depth: <a href="https://t.co/dCMnSHP7Pl">https://t.co/dCMnSHP7Pl</a>. Please join to learn and share. <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a></p>&mdash; Isabella R. Ghement (@IsabellaGhement) <a href="https://twitter.com/IsabellaGhement/status/948685418731487232?ref_src=twsrc%5Etfw">January 3, 2018</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -109,7 +109,7 @@ I use the <code>map*</code> family of functions included in <code>purrr</code> (
 ## 1 15.8   8  351 264 4.22 3.17 14.5  0  1    5    4  126.4
 ## 2 15.0   8  301 335 3.54 3.57 14.6  0  1    5    8  120.0</code></pre>
 <p>Until now, nothing new compared to my previous post (so if you have a hard time to follow what I’m
-doing here, go read it <a href="http://www.brodrigues.co/blog/2018-01-03-lists_all_the_way/">here</a>).</p>
+doing here, go read it <a href="2018-01-03-lists_all_the_way.qmd">here</a>).</p>
 <p>As far as I know, there is no way, in this example, to avoid this nested map call. However,
 suppose now that you want to apply a function to each single data frame contained in the list <code>result</code>.
 Of course, here, you could simply use <code>bind_rows()</code> to have a single data frame and then apply your
@@ -338,4 +338,3 @@ replace <code>map()</code> by <code>walk()</code> in most cases; try it and see 
 </div>
 
 <p>I have two Excel workbooks, (one per list), where each sheet is a data frame!</p>
-<p>If you enjoy these blog posts, you can follow me on <a href="https://twitter.com/brodriguesco">twitter</a>.</p>
