--- a/posts/2017-07-02-dplyr-0-70-tutorial.qmd
+++ b/posts/2017-07-02-dplyr-0-70-tutorial.qmd
@@ -8,7 +8,7 @@ toc: true
 ---
 
 
-<p>This blog post is an update to an older <a href="http://www.brodrigues.co/blog/2017-02-17-lesser_known_tricks/">one</a>
+<p>This blog post is an update to an older <a href="2017-02-17-lesser_known_tricks.qmd">one</a>
 I wrote in March.
 In the post from March, <code>dplyr</code> was at version 0.50, but since then a major update introduced some
 changes that make some of the tips in that post obsolete. So here I revisit the blog post from March
@@ -20,7 +20,7 @@ version. What did change however is creating new columns using <code>case_when()
 First, load <code>dplyr</code> and the <code>mtcars</code> dataset:</p>
 <pre class="r"><code>library(&quot;dplyr&quot;)
 data(mtcars)</code></pre>
-<p>This was how it was done in version 0.50 (notice the ‘.$’ symbol before the variable ‘carb’):</p>
+<p>This was how it was done in version 0.50 (notice the `.$` symbol before the variable `carb`):</p>
 <pre class="r"><code>mtcars %&gt;%
     mutate(carb_new = case_when(.$carb == 1 ~ &quot;one&quot;,
                                 .$carb == 2 ~ &quot;two&quot;,
@@ -88,7 +88,7 @@ example from the March blog post:</p>
 }
 
 extract_vars(mtcars, &quot;spam&quot;)</code></pre>
-<p>More examples are available in <a href="http://www.brodrigues.co/blog/2016-07-18-data-frame-columns-as-arguments-to-dplyr-functions/">this other blog post</a>.</p>
+<p>More examples are available in <a href="2016-07-18-data-frame-columns-as-arguments-to-dplyr-functions.qmd">this other blog post</a>.</p>
 <p>I will revisit them now with <code>dplyr</code>’s new <code>tidyeval</code> syntax. I’d recommend you read the <em>Tidy evaluation</em>
 vignette <a href="https://cran.r-project.org/web/packages/rlang/vignettes/tidy-evaluation.html">here</a>. This vignette
 is part of the <code>rlang</code> package, which gets used under the hood by <code>dplyr</code> for all your programming needs.
