--- a/posts/2018-04-14-playing_with_furrr.qmd
+++ b/posts/2018-04-14-playing_with_furrr.qmd
@@ -12,9 +12,9 @@ toc: true
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">For those of us that just can&#39;t wait until RStudio officially supports parallel purrr in <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a>, boy have I got something for you. <br><br>Introducing `furrr`, parallel purrr through the use of futures. Go ahead, break things, you know you want to:<a href="https://t.co/l9z1UC2Tew">https://t.co/l9z1UC2Tew</a></p>&mdash; Davis Vaughan (@dvaughan32) <a href="https://twitter.com/dvaughan32/status/984828716181319680?ref_src=twsrc%5Etfw">April 13, 2018</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 <p>and as a heavy <code>{purrr}</code> user, as well as the happy owner of a 6-core AMD Ryzen 5 1600X cpu,
 I was very excited to try out <code>{furrr}</code>. For those unfamiliar with <code>{purrr}</code>, you can
-read some of my previous blog posts on it <a href="http://www.brodrigues.co/blog/2017-03-24-lesser_known_purrr/">here</a>,
-<a href="http://www.brodrigues.co/blog/2017-03-29-make-ggplot2-purrr/">here</a> or
-<a href="http://www.brodrigues.co/blog/2018-01-19-mapping_functions_with_any_cols/">here</a>.</p>
+read some of my previous blog posts on it <a href="2017-03-24-lesser_known_purrr.qmd">here</a>,
+<a href="2017-03-29-make-ggplot2-purrr.qmd">here</a> or
+<a href="2018-01-19-mapping_functions_with_any_cols.qmd">here</a>.</p>
 <p>To summarize very quickly: <code>{purrr}</code> contains so-called higher order functions, which are functions
 that take other functions as argument. One such function is <code>map()</code>. Consider the following simple example:</p>
 <pre class="r"><code>numbers &lt;- seq(1, 10)</code></pre>
@@ -87,7 +87,7 @@ brotools::describe(boys) %&gt;%
 ## # ... with 3 more variables: median &lt;dbl&gt;, q75 &lt;dbl&gt;, n_unique &lt;int&gt;</code></pre>
 <p>In the code above I use the <code>describe()</code> function from my personal package to get some summary
 statistics of the <code>boys</code> dataset (you can read more about this function
-<a href="http://www.brodrigues.co/blog/2018-04-10-brotools_describe">here</a>). I am especially interested in the number of
+<a href="2018-04-10-brotools_describe.qmd">here</a>). I am especially interested in the number of
 missing values, which is why I re-order the columns. If I did not re-order the columns, it would not appear in
 the output on my blog.</p>
 <p>We see that some columns have a lot of missing values. Using the <code>mice</code> function, it is very
@@ -364,5 +364,3 @@ very nice script <a href="https://github.com/gerkovink/parlMICE">here</a> to do 
 called <a href="https://github.com/b-rodrigues/parlMICE">parlMICE</a> (the same name as the script), to make installation and
 usage easier. You can install it like so:</p>
 <pre class="r"><code>devtools::install_github(&quot;b-rodrigues/parlMICE&quot;)</code></pre>
-<p>If you found this blog post useful, you might want to follow me on <a href="https://www.twitter.com/brodriguesco">twitter</a>
-for blog post updates.</p>
