--- a/posts/2018-10-05-ggplot2_purrr_officer.qmd
+++ b/posts/2018-10-05-ggplot2_purrr_officer.qmd
@@ -26,7 +26,7 @@ or some other such tool that was familiar to the client, and not export the plot
 png as I would normally do. I still wanted to use R to do it though, because I could do what I always
 do to when I need to perform repetitive tasks such as producing hundreds of plots; map over a list
 of, say, countries, and make one plot per country. This is something I discussed in a previous
-blog post, <a href="http://www.brodrigues.co/blog/2017-03-29-make-ggplot2-purrr/">Make ggplot2 purrr</a>.</p>
+blog post, <a href="2017-03-29-make-ggplot2-purrr.qmd">Make ggplot2 purrr</a>.</p>
 <p>So, after some online seaching, I found the <code>{officer}</code> package. This package allows you to put
 objects into Microsoft documents. For example, editable plots in a Powerpoint document. This is what
 I will show in this blog post.</p>
@@ -35,8 +35,8 @@ I will show in this blog post.</p>
 library(&quot;officer&quot;)
 library(&quot;rvg&quot;)</code></pre>
 <p>Then, I will use the data from the time use survey, which I discussed in a previous blog post
-<a href="http://www.brodrigues.co/blog/2018-09-11-human_to_machine/">Going from a human readable Excel file to a machine-readable csv with {tidyxl}</a>.</p>
-<p>You can download the data <a href="https://github.com/rbind/b-rodrigues.github.com/blob/master/content/blog/clean_data.csv">here</a>.</p>
+<a href="2018-09-11-human_to_machine.qmd">Going from a human readable Excel file to a machine-readable csv with {tidyxl}</a>.</p>
+<p>You can download the data <a href="../assets/files/clean_data.csv">here</a>.</p>
 <p>Let’s import and prepare it:</p>
 <pre class="r"><code>time_use &lt;- rio::import(&quot;clean_data.csv&quot;)
 
@@ -83,7 +83,7 @@ inside one:</p>
                        ylab(&quot;Time in minutes&quot;) +
                        xlab(&quot;Activities&quot;)))</code></pre>
 <p>These steps are all detailled in my blog post
-<a href="http://www.brodrigues.co/blog/2017-03-29-make-ggplot2-purrr/">Make ggplot2 purrr</a>.
+<a href="2017-03-29-make-ggplot2-purrr.qmd">Make ggplot2 purrr</a>.
 Let’s take a look at <code>my_plots</code>:</p>
 <pre class="r"><code>my_plots</code></pre>
 <pre><code>## # A tibble: 3 x 3
