--- a/posts/2018-11-15-tidy_gridsearch.qmd
+++ b/posts/2018-11-15-tidy_gridsearch.qmd
@@ -109,7 +109,7 @@ logged_test_data &lt;- ihs(avia_clean_test)</code></pre>
 }</code></pre>
 <p>This function takes a <code>forecast</code> object as argument, and returns a nice tibble. This will be useful
 later, and is based on the code I already used in my previous
-<a href="https://www.brodrigues.co/blog/2018-11-14-luxairport/">blog post</a>.</p>
+<a href="2018-11-14-luxairport.qmd">blog post</a>.</p>
 <p>Now, let’s take a closer look at the <code>arima()</code> function:</p>
 <pre><code>ARIMA Modelling of Time Series
 
@@ -383,7 +383,7 @@ from 2015 to 2018. Because I have to add it as a list of size 2304, I do that wi
     geom_line(data = best_model_forecast, aes(x = date, y = point_estimate), linetype = 2, colour = &quot;#8e9d98&quot;) +
     theme_blog()</code></pre>
 <div style="text-align: center;"><img src="../assets/img/tidy_gridsearch-28-1.png" width="80%" height="auto" / width="80%" height="auto"></div>
-<p>Compared to the previous <a href="https://www.brodrigues.co/blog/2018-11-14-luxairport/">blog post</a>, the
+<p>Compared to the previous <a href="2018-11-14-luxairport.qmd">blog post</a>, the
 dotted line now seems to follow the true line even better! However, this is not suprising, as I
 am using the test set as a validation set, which might lead to overfitting the hyperparameters
 to the test set. Also, I am not saying that you should always do a gridsearch whenever you have a
