--- a/posts/2019-02-04-newspapers_shiny_app_tutorial.qmd
+++ b/posts/2019-02-04-newspapers_shiny_app_tutorial.qmd
@@ -33,7 +33,7 @@ dump of words, and did not know which words came from which article, or ad in th
 data from the <em>L’Union</em> newspaper, this time by using the metadata from the METS files too. By
 combining the data from the ALTO files with the metadata from the METS files, I know which
 words came from which article, which would make further analysis much more interesting.</p>
-<p>In the <a href="https://www.brodrigues.co/blog/2019-01-31-newspapers_shiny_app/">third blog post</a> of this series,
+<p>In the <a href="2019-01-31-newspapers_shiny_app.qmd">third blog post</a> of this series,
 I built a Shiny app which makes it easy to explore the 10 years of publications of <em>L’Union</em>. In this
 blog post, I will explain in great detail how I created this app.</p>
 </div>
@@ -46,7 +46,7 @@ blog post, I will explain in great detail how I created this app.</p>
 Extract this archive, and you will find the data exactly as you would get it from the the big
 archive you can download from the website of the National Library of Luxembourg. However, to keep
 the size of the archive small, I removed the .pdf and .jpeg scans.</p>
-<p>In the <a href="https://www.brodrigues.co/blog/2019-01-13-newspapers_mets_alto/">second blog post</a>) I wrote
+<p>In the <a href="2019-01-13-newspapers_mets_alto.qmd">second blog post</a>) I wrote
 some functions that made extracting the needed data from the files easy. However, after I wrote the
 article, I noticed that in some cases these functions were not working exactly as intended. I
 rewrote them a little bit to overcome these issues. You can find the code I used right below. I won’t
@@ -346,7 +346,7 @@ not really what we want.</p>
 </div>
 <div id="step-4-tf-idf" class="section level3">
 <h3>Step 4: tf-idf</h3>
-<p>Just like what I did in my <a href="https://www.brodrigues.co/blog/2019-01-04-newspapers/">first blog post</a>,
+<p>Just like what I did in my <a href="2019-01-04-newspapers.qmd">first blog post</a>,
 I compute the tf-idf of words. The difference, is that here the “document” is the article. This means
 that I will get the most frequent words inside each article, but who are at the same time rare
 in the other articles. Doing this ensures that I will only get very relevant words for each article.</p>
