--- a/posts/2023-10-05-repro_overview.qmd
+++ b/posts/2023-10-05-repro_overview.qmd
@@ -60,10 +60,10 @@ Whatever you choose, Docker by itself is not enough: Docker provides a base
 where you can then add these other things on top.</p>
 <p>To know more, read this:</p>
 <ul>
-<li><a href="https://www.brodrigues.co/blog/2022-11-19-raps/">https://www.brodrigues.co/blog/2022-11-19-raps/</a></li>
-<li><a href="https://www.brodrigues.co/blog/2022-11-30-pipelines-as/">https://www.brodrigues.co/blog/2022-11-30-pipelines-as/</a></li>
-<li><a href="https://www.brodrigues.co/blog/2023-05-08-dock_dev_env/">https://www.brodrigues.co/blog/2023-05-08-dock_dev_env/</a></li>
-<li><a href="https://www.brodrigues.co/blog/2023-01-12-repro_r/">https://www.brodrigues.co/blog/2023-01-12-repro_r/</a></li>
+<li><a href="2022-11-19-raps.qmd">https://www.brodrigues.co/blog/2022-11-19-raps/</a></li>
+<li><a href="2022-11-30-pipelines-as.qmd">https://www.brodrigues.co/blog/2022-11-30-pipelines-as/</a></li>
+<li><a href="2023-05-08-dock_dev_env.qmd">https://www.brodrigues.co/blog/2023-05-08-dock_dev_env/</a></li>
+<li><a href="2023-01-12-repro_r.qmd">https://www.brodrigues.co/blog/2023-01-12-repro_r/</a></li>
 </ul>
 <p>By combining Docker plus any of the other packages listed above (or by using the
 PPPM) you can quite easily build reproducible projects, because what you end up
@@ -123,12 +123,12 @@ with Linux and package managers, Nix is really an incredible deep tool. So I
 would say that the entry cost is around 9 out of 10…, but to bring this entry
 cost down, I have written 6 blog posts to get you started:</p>
 <ul>
-<li><a href="https://www.brodrigues.co/blog/2023-07-13-nix_for_r_part1/">https://www.brodrigues.co/blog/2023-07-13-nix_for_r_part1/</a></li>
-<li><a href="https://www.brodrigues.co/blog/2023-07-19-nix_for_r_part2/">https://www.brodrigues.co/blog/2023-07-19-nix_for_r_part2/</a></li>
-<li><a href="https://www.brodrigues.co/blog/2023-07-30-nix_for_r_part3/">https://www.brodrigues.co/blog/2023-07-30-nix_for_r_part3/</a></li>
-<li><a href="https://www.brodrigues.co/blog/2023-08-12-nix_for_r_part4/">https://www.brodrigues.co/blog/2023-08-12-nix_for_r_part4/</a></li>
-<li><a href="https://www.brodrigues.co/blog/2023-09-15-nix_for_r_part5/">https://www.brodrigues.co/blog/2023-09-15-nix_for_r_part5/</a></li>
-<li><a href="https://www.brodrigues.co/blog/2023-09-20-nix_for_r_part6/">https://www.brodrigues.co/blog/2023-09-20-nix_for_r_part6/</a></li>
+<li><a href="2023-07-13-nix_for_r_part1.qmd">https://www.brodrigues.co/blog/2023-07-13-nix_for_r_part1/</a></li>
+<li><a href="2023-07-19-nix_for_r_part2.qmd">https://www.brodrigues.co/blog/2023-07-19-nix_for_r_part2/</a></li>
+<li><a href="2023-07-30-nix_for_r_part3.qmd">https://www.brodrigues.co/blog/2023-07-30-nix_for_r_part3/</a></li>
+<li><a href="2023-08-12-nix_for_r_part4.qmd">https://www.brodrigues.co/blog/2023-08-12-nix_for_r_part4/</a></li>
+<li><a href="2023-09-15-nix_for_r_part5.qmd">https://www.brodrigues.co/blog/2023-09-15-nix_for_r_part5/</a></li>
+<li><a href="2023-09-20-nix_for_r_part6.qmd">https://www.brodrigues.co/blog/2023-09-20-nix_for_r_part6/</a></li>
 </ul>
 <p>Also, by the way, it is entirely possible to build a Docker image based on
 Ubuntu, install the Nix package manager on it, and then use Nix inside Docker
