--- a/packages.qmd
+++ b/packages.qmd
@@ -1,3 +1,29 @@
 ---
 title: "Packages"
 ---
+
+## rix: Reproducible Data Science environments with Nix
+
+<a href = "https://docs.ropensci.org/rix/"><img
+src="https://docs.ropensci.org/rix/logo.png" align="left" style="display:
+inline; margin: 10px 50px 10px 10px; border-width: 0px;" width="180" /></a><p>
+Simplifies the creation of reproducible data science environments using the
+'Nix' package manager, as described in Dolstra (2006) <ISBN 90-393-4130-3>. The
+included ‘rix()' function generates a complete description of the environment as
+a 'default.nix' file, which can then be built using ’Nix'. This results in
+project specific software environments with pinned versions of R, packages,
+linked system dependencies, and other tools. Additional helpers make it easy to
+run R code in 'Nix' software environments for testing and production. </p>
+
+
+## chronicler: Add Logging to Functions
+
+<a href = "https://b-rodrigues.github.io/chronicler/"><img
+src="https://b-rodrigues.github.io/chronicler/reference/figures/hex.png" align="left" style="display: inline;
+margin: 10px 50px 10px 10px; border-width: 0px;" width="180" /></a><p> Decorate
+functions to make them return enhanced output. The enhanced output consists in
+an object of type 'chronicle' containing the result of the function applied to
+its arguments, as well as a log detailing when the function was run, what were
+its inputs, what were the errors (if the function failed to run) and other
+useful information. Tools to handle decorated functions are included, such as a
+forward pipe operator that makes chaining decorated functions possible. </p>
